--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -296,16 +296,20 @@ mat-form-field.mat-mdc-form-field {
 
 .main-pane-action-select ::ng-deep .mdc-notched-outline__leading {
     border-radius: 999px 0 0 999px;
-    min-width: 16px;
+    width: 28px !important;
+    min-width: 28px;
+    border-right: none;
 }
 
 .main-pane-action-select ::ng-deep .mdc-notched-outline__trailing {
     border-radius: 0 999px 999px 0;
+    border-left: none;
 }
 
 .main-pane-action-select ::ng-deep .mdc-notched-outline__notch {
-    border-left: none;
-    border-right: none;
+    max-width: 0;
+    padding: 0;
+    border: none;
 }
 
 .main-pane-select-spinner {
